tests/type_check/hll_diagnostics_type_checking.err.expected
error: at 8:11: [HTC-UndeclaredVariable] In function 'test_silenced_error': undeclared variable 'undeclared_var'
   |
 7 |   # This infers 'x' as Type::Error to poison the local variable.
 8 |   let x = undeclared_var;
   |           ^^^^^^^^^^^^^^
 9 | 
   |
error: at 18:16: [HTC-TypeMismatch] In function 'test_int_var_mismatch_with_float': type mismatch: expected integer type, found f64
    |
 17 |   let x = 42;
 18 |   let y: f64 = x;
    |                ^
 19 | }
    |
error: at 23:16: [HTC-TypeMismatch] In function 'test_float_var_mismatch_with_int': type mismatch: expected float type, found i64
    |
 22 |   let x = 42.2;
 23 |   let y: i64 = x;
    |                ^
 24 | }
    |
error: at 29:11: [HTC-UndeclaredVariable] In function 'test_undeclared_variable': undeclared variable 'y'
    |
 28 | fn test_undeclared_variable() -> i64 {
 29 |   let x = y;
    |           ^
 30 |   x
    |
error: at 39:3: [HTC-TypeMismatch] In function 'test_return_type_mismatch': type mismatch: expected bool, found i64
    |
 38 | fn test_return_type_mismatch() -> i64 {
 39 |   true
    |   ^^^^
 40 | }
    |
error: at 45:9: [HTC-TypeMismatch] In function 'test_defer_type_mismatch': type mismatch: expected integer type, found unit
    |
 44 | fn test_defer_type_mismatch() {
 45 |   defer 42;
    |         ^^
 46 | }
    |
error: at 53:8: [HTC-UnknownAbi] unknown extern ABI 'system' — expected 'C' or bare extern
    |
 52 | # check widens.
 53 | extern "system" fn win_api(x: i64);
    |        ^^^^^^^^
 54 | extern "fastcall" fn stdcall_thing(y: i64);
    |
error: at 54:8: [HTC-UnknownAbi] unknown extern ABI 'fastcall' — expected 'C' or bare extern
    |
 53 | extern "system" fn win_api(x: i64);
 54 | extern "fastcall" fn stdcall_thing(y: i64);
    |        ^^^^^^^^^^
 55 | 
    |
error: at 61:49: [HTC-UnaryOpInvalidOperand] In function 'test_unary_neg_on_unsigned': unary '-' requires a signed integer or float operand, found u64
    |
 60 | # in the `Neg` arm of `to_i64`.
 61 | fn test_unary_neg_on_unsigned(x: u64) -> u64 { -x }
    |                                                 ^
 62 | fn test_unary_neg_on_bool(b: bool) -> bool { -b }
    |
error: at 62:47: [HTC-UnaryOpInvalidOperand] In function 'test_unary_neg_on_bool': unary '-' requires a signed integer or float operand, found bool
    |
 61 | fn test_unary_neg_on_unsigned(x: u64) -> u64 { -x }
 62 | fn test_unary_neg_on_bool(b: bool) -> bool { -b }
    |                                               ^
    |
error: at 2:11: [HTC-AmbiguousType] type annotations needed: type of expression is ambiguous (could not resolve type variable in [?0; 0])
   |
 1 | fn test_ambiguous_type() {
 2 |   let x = [];
   |           ^^
 3 | }
   |
