tests/type_check/hll_diagnostics_type_checking.si
fn test_ambiguous_type() {
  let x = [];
}

fn test_silenced_error() {
  # 1. First error: 'undeclared_var' is undeclared.
  # This infers 'x' as Type::Error to poison the local variable.
  let x = undeclared_var;

  # Unification succeeds silently, and binary typecheck accepts Type::Error
  # without pushing a secondary "non-numeric operand" error (silencing).
  let y = x + 1;
  let z = x + 42.0;
}

fn test_int_var_mismatch_with_float() {
  let x = 42;
  let y: f64 = x;
}

fn test_float_var_mismatch_with_int() {
  let x = 42.2;
  let y: i64 = x;
}

# ---------- HTC-UndeclaredVariable ----------

fn test_undeclared_variable() -> i64 {
  let x = y;
  x
}

# ---------- HTC-TypeMismatch: block value vs declared return type ----------

# The block's trailing expression is a `bool`; the declared return
# type is `i64`. Distinct from the let-annotation mismatch above —
# this is the fn-body unification path.
fn test_return_type_mismatch() -> i64 {
  true
}

# ---------- TC-AssignmentTypeMismatch: defer body has wrong type ----------

fn test_defer_type_mismatch() {
  defer 42;
}

# ---------- HTC-UnknownAbi: extern with a non-C ABI string ----------

# Bare `extern` (Silica ABI) and `extern "C"` (C ABI) are accepted;
# any other ABI string is rejected. When more ABIs are supported the
# check widens.
extern "system" fn win_api(x: i64);
extern "fastcall" fn stdcall_thing(y: i64);

# ---------- HTC-UnaryOpInvalidOperand ----------

# Unary `-` requires a signed integer or float operand. u64 is rejected;
# same for bool. Positive coverage: `enum_matches.si` uses `-n` on i64
# in the `Neg` arm of `to_i64`.
fn test_unary_neg_on_unsigned(x: u64) -> u64 { -x }
fn test_unary_neg_on_bool(b: bool) -> bool { -b }
